sumo/tests/traci/PositionConversion/InvalidPosOnRoad/net_state.traci
<?xml version="1.0"?>

<!-- generated on 05/18/08 16:12:03 by SUMO sumo Version dev-SVN-r5536
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <route-files>routes.rou.xml</route-files>
   </input>

   <output>
      <netstate-dump>netstate_dump.xml</netstate-dump>
   </output>

   <traffic_control_interface_(traci)_server>
      <remote-port>8834</remote-port>
      <penetration>1</penetration>
   </traffic_control_interface_(traci)_server>

</configuration>
-->

<sumo-netstate>
   <timestep time="1">
   </timestep>
</sumo-netstate>
